# CrewAi

00_uv/01_project/explore-uv/: pyproject.toml
00_uv/02_project/explore-uv-2/: pyproject.toml
01_litellm/: README.md
01_litellm/myproject/: README.md  pyproject copy.toml  pyproject.toml
01_litellm/myproject/src/myproject/: hello.py
01_project/: README.md
02_project/explore-uv-2/src/explore_uv_2/: __init__.py
02_python_decorators/: ReadME.md
02_python_decorators/myproject/: README.md  pyproject.toml  requirements.txt
02_python_decorators/myproject/src/myproject/: say_hello.py
