[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SamarSaeed1146", email = "samarsaeed374@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.95.0",
    "litellm>=1.60.6",
]

[project.scripts]
myproject = "myproject:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
