[project]
name = "explore-uv-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SamarSaeed1146", email = "samarsaeed374@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
explore-uv-2 = "explore_uv_2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
